--- a/META.yml
+++ b/META.yml
@@ -9,7 +9,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: 'Module::Install version 0.93'
+generated_by: 'Module::Install version 0.95'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -22,9 +22,9 @@ no_index:
     - t
     - xt
 requires:
-  Mouse: 0.5002
+  Mouse: 0.51
   perl: 5.6.2
 resources:
   license: http://dev.perl.org/licenses/
   repository: git://github.com/gfx/Perl-MouseX-NativeTraits.git
-version: 0.001_02
+version: 0.002
