--- a/META.yml
+++ b/META.yml
@@ -3,8 +3,9 @@ abstract: 'Extend your attribute interfaces for Mouse'
 author:
   - 'Goro Fuji (gfx) <gfuji(at)cpan.org>'
 build_requires:
+  Any::Moose: 0.13
   ExtUtils::MakeMaker: 6.42
-  Test::Exception: 0.29
+  Test::Fatal: 0.003
   Test::More: 0.88
 configure_requires:
   ExtUtils::MakeMaker: 6.42
@@ -22,9 +23,9 @@ no_index:
     - t
     - xt
 requires:
-  Mouse: 0.74
+  Mouse: 0.82
   perl: 5.6.2
 resources:
   license: http://dev.perl.org/licenses/
-  repository: git://github.com/gfx/Perl-MouseX-NativeTraits.git
-version: 1.00
+  repository: git://github.com/gfx/p5-MouseX-NativeTraits.git
+version: 1.01
