Import of GFUJI/MouseX-NativeTraits-1.02 from CPAN.
gitpan-cpan-distribution: MouseX-NativeTraits
gitpan-cpan-version:      1.02
gitpan-cpan-path:         GFUJI/MouseX-NativeTraits-1.02.tar.gz
gitpan-cpan-author:       GFUJI
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -19,6 +19,7 @@ module_name: MouseX::NativeTraits
 name: MouseX-NativeTraits
 no_index:
   directory:
+    - example
     - inc
     - t
     - xt
@@ -28,4 +29,4 @@ requires:
 resources:
   license: http://dev.perl.org/licenses/
   repository: git://github.com/gfx/p5-MouseX-NativeTraits.git
-version: 1.01
+version: 1.02
