--- a/META.yml
+++ b/META.yml
@@ -4,13 +4,14 @@ author:
   - 'Goro Fuji (gfx) <gfuji(at)cpan.org>'
 build_requires:
   Any::Moose: 0.13
-  ExtUtils::MakeMaker: 6.42
+  ExtUtils::MakeMaker: 6.62
   Test::Fatal: 0.003
   Test::More: 0.88
 configure_requires:
-  ExtUtils::MakeMaker: 6.42
+  ExtUtils::MakeMaker: 6.62
 distribution_type: module
-generated_by: 'Module::Install version 1.00'
+dynamic_config: 1
+generated_by: 'Module::Install version 1.04'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -29,4 +30,4 @@ requires:
 resources:
   license: http://dev.perl.org/licenses/
   repository: git://github.com/gfx/p5-MouseX-NativeTraits.git
-version: 1.04
+version: 1.05
